--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "^6.1.0",
     "ag-grid-angular": "^19.0.0",
     "ag-grid-community": "^19.0.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.4",
     "rxjs": "~6.2.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
