--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,15 @@
               "src/styles.less",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/nova-dark/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/virtual-keyboard/dist/css/keyboard.min.css",
+              "node_modules/virtual-keyboard/dist/css/keyboard-basic.min.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/virtual-keyboard/dist/js/jquery.keyboard.min.js"
+            ]
           },
           "configurations": {
             "production": {
