--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/virtual-keyboard": "^1.26.0",
     "ag-grid-angular": "^19.0.0",
     "ag-grid-community": "^19.0.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.4",
     "rxjs": "~6.2.0",
+    "virtual-keyboard": "^1.28.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
