--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primeng": "^6.1.4",
     "rxjs": "~6.2.0",
     "virtual-keyboard": "^1.28.4",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
