--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.3.1",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.4",
+    "reconnecting-websocket": "^4.1.0",
     "rxjs": "~6.2.0",
     "virtual-keyboard": "^1.28.4",
     "web-animations-js": "^2.3.1",
