--- a/src/assets/appsettings.json
+++ b/src/assets/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "wcsURL": "http://localhost:3001",
-    "wcsWSURL": "ws://localhost:3001",
+    "wcsURL": "http://localhost:3000",
+    "wcsWSURL": "ws://localhost:3000/wcs",
     "statusInterval": 10 
 }
