--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/superstatic.json"
             ],
             "styles": [
               "src/styles.less",
